work in progress on API
